# qtgpscWidget

./: .hgtags  CHANGELOG  CMakeLists.txt  FindGpsd.cmake  INSTALL  README  Readme.md  VERSION  gpswidget.cpp  gpswidget.h  install.sh  obs-staging.sh  qtgpsc.desktop.in  satellite.h  sattellite.h  satview.cpp  satview.h
obs/: qtgpsc.changes  qtgpsc_basic.spec
src/: CMakeLists.txt  GpsdRawDataViewer.ui  MainWindow.ui  gpsd.cpp  gpsdrawdataviewer.cpp  gpsdrawdataviewer.h  main.c  main.cpp  qtgpsc.cpp  qtgpsc.desktop.in  qtgpsc.h  qtgpsc.pro  qtgpsc.qrc  sattable.cpp  sattable.h  satview.cpp  satview.h
